test/src/e2e_vm_tests/test_programs/should_fail/resolve_local_items_that_shadow_imports/src/lib.sw
library;

pub enum Enum {
    A: (),
}

pub struct Struct {
    x: u64,
}

pub struct PubStruct {
   x: u64,
}

pub struct GenericStruct<T> {
    x: T,
}

pub const X: u64 = 0u64;